fixat z-index på sorteringsmeny

--- a/src/scss/pages/products.scss
+++ b/src/scss/pages/products.scss
@@ -8,34 +8,33 @@ body {
     margin: 0;
 }
 
-.sort-wrapper{
+.sort-wrapper {
     display: flex;
     justify-content: center;
 
-    .prodSort{
+    .prodSort {
         position: relative;
         display: inline-block;
         width: 90%;
         margin: 20px;
-    
+
         @include mixins.tablets-only {
             width: 80%;
             max-width: 1000px;
         }
-    
-        .chosenSort{
+
+        .chosenSort {
             font-weight: bold;
         }
-        
-        #dropdownButton{
+
+        #dropdownButton {
             height: 35px;
             color: black;
             border: none;
             background-color: white;
             cursor: pointer;
         }
-        
-        
+
         .dropdown-menu {
             display: none;
             list-style: none;
@@ -46,21 +45,20 @@ body {
             width: 140px;
             border: 1px solid lightgray;
             border-radius: 4px;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-            z-index: 1;
-    
-            li{
-                padding-bottom: 5px ;
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+            z-index: 2;
+
+            li {
+                padding-bottom: 5px;
                 cursor: pointer;
             }
         }
-    
+
         .show {
-            display:block;
+            display: block;
         }
     }
 }
-
 
 #product-wrapper {
     @include mixins.flex-col;
